Fix search overlay z-index

--- a/sass/_header.sass
+++ b/sass/_header.sass
@@ -36,7 +36,7 @@ header i
 
 .search__overlay
   position: fixed
-  z-index: 110
+  z-index: 999999999
   background: rgba(0, 0, 0, 0.8)
 
 .search__close
