--- a/sass/_portraitSlider.sass
+++ b/sass/_portraitSlider.sass
@@ -93,11 +93,11 @@
 @media only screen and (min-width: $break-desk)
 
   .portrait__slide__body
-    top: 8vw
+    top: 6vw
     left: 4vw
 
   .portrait__slider .slider__navigation
-    top: 8vw
+    top: 6vw
     right: 1vw
 
   .portrait__slide__body
