--- a/sass/master.css
+++ b/sass/master.css
@@ -220,7 +220,7 @@ header i {
 
 .search__overlay {
   position: fixed;
-  z-index: 110;
+  z-index: 999999999;
   background: rgba(0, 0, 0, 0.8); }
 
 .search__close {
@@ -628,10 +628,10 @@ header i {
 
 @media only screen and (min-width: 1025px) {
   .portrait__slide__body {
-    top: 8vw;
+    top: 6vw;
     left: 4vw; }
   .portrait__slider .slider__navigation {
-    top: 8vw;
+    top: 6vw;
     right: 1vw; }
   .portrait__slide__body {
     width: 50%;
